# real-doc

./: .gitignore  README.md  guide.md  how_we_build.md  pyproject.toml
app/: main.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/endpoints/: process.py  upload.py
app/cli/: main.py
app/core/: config.py
app/ingestion/: pipeline.py  text_extractor.py
app/schemas/: book.py  upload_dtos.py
app/services/: storage_service.py
ui/: app.py
