[project]
name = "rag-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.27.1",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.4.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.28.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
